# PyFishPack

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
.ipynb_checkpoints/: README-checkpoint.md
PyFishPack/: __init__.py  _dummy.c  apps.py  meson.build
PyFishPack/src/: fftpack_c_api.f90  fishpack.pyf  fishpack_c_api.f90  fishpack_core.pyf  fishpack_original.pyf  iterative_solvers.f90  pyfishpack_module.c  type_CenteredCyclicReductionUtility.f90  type_CyclicReductionUtility.f90
tools/: audit_backend_scope.py  verify_modern_backend.py
